# src/routes/friend.go
@@ -17,6 +17,7 @@ func SetupRoutesFriend(app *gin.Engine) {
 		friends.POST("/", friendController.AddFriend)
 		friends.GET("/", friendController.GetFriends)
 		friends.GET("/pendings", friendController.GetFriendsPending)
-		friends.PUT("/", friendController.AcceptedFriend)
+		friends.PUT("/accept", friendController.AcceptedFriend)
+		friends.PUT("/refused", friendController.RefuseFriend)
 	}
 }
